# Learning-Agency-Lab

./: .gitignore  bert-config.py  main.py  pyproject.toml
bert-base-uncased-config/: config.json
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: optuna.yaml
conf/model/: electora.yaml
dataset/: __init__.py  customdataset.py  dataset.py  preprocess.py
experiment/: __init__.py  experiment.py  optimizers.py  optuna.py  utils.py
model/: __init__.py  base_model.py  gbm.py  get_model.py  model.py
