[tool.poetry]
name = "learning-agency-lab"
version = "0.1.0"
description = ""
authors = ["kusukawa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
transformers = "^4.41.0"
hydra-core = "^1.3.2"
torch = "^2.3.0"
torchinfo = "^1.8.0"
nn = "^0.1.1"
sentencepiece = "^0.2.0"
protobuf = "^5.27.0"
xgboost = "^2.1.0"
lightgbm = "^4.4.0"
catboost = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
